--- a/index.html
+++ b/index.html
@@ -203,53 +203,27 @@
 
 
     <!-- ABOUT -->
-    <section id="about">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-5 py-5">
-                    <div class="row">
-
-                        <div class="col-12">
-                            <div class="info-box">
-                                <img src="img/icon6.png" alt="">
-                                <div class="ms-4">
-                                    <h5>Digital Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the
-                                        readable
-                                        content of a page </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <div class="info-box">
-                                <img src="img/icon4.png" alt="">
-                                <div class="ms-4">
-                                    <h5>E-mail Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the
-                                        readable
-                                        content of a page </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 mt-4">
-                            <div class="info-box">
-                                <img src="img/icon5.png" alt="">
-                                <div class="ms-4">
-                                    <h5>Buisness Marketing</h5>
-                                    <p>It is a long established fact that a reader will be distracted by the
-                                        readable
-                                        content of a page </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <img src="img/about.png" alt="">
+    <div class="container" style="padding-top: 4rem;">
+        <div class="row justify-content-center">
+            <div class="col-lg-1 "></div>
+            <div class="col-lg-5  py-2">
+                <h1>TRAMITACIÓN DE LICENCIAS</h1>
+                <hr class="divider" />
+                <p>El Club de Atletismo Santiago presenta el siguiente protocolo para la tramitación de licencias de sus atletas federados en la temporada 2024.
+                    Para la tramitación de la licencia RFEA/FGA por parte del Club de Atletismo Santiago entre a través de este enlace:</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Tramitación Licencias
+                    </button>   
                 </div>
             </div>
+
+            <div class="col-lg-5 ">
+                <img src="img/licencias.png" style="width: 60%; margin-left: 25%;" alt="">
+            </div>
         </div>
-    </section>
+    </div>
+
 
 
 
