acabada la pagina de patrocinadores, iniciado el calendario

--- a/calendario.html
+++ b/calendario.html
@@ -19,6 +19,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" integrity="sha512-vTxq/ZfDUXe8ATiWD8qF9NQFstVh78z+dUUSnZlPl8ezp9v68W9V+xjsb8TG1jOWUQ53sJ86O+7bMq5eZ0RJRA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <title>Club Atletismo Santiago</title>
 </head>
 
@@ -90,80 +94,43 @@
     <div class="container mt-5 py-1">
         <div class="container">
             <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s">
-                <h5 class="text-primary-gradient fw-medium">CONTACTO</h5>
-                <h1 class="mb-1">Métodos de Contacto</h1>
-                <p class="mb-0">Si tienes alguna pregunta no dudes en ponerte en contacto con nosotros ya sea online o
-                    presencialmente</p>
+                <h5 class="text-primary-gradient fw-medium">CALENDARIO</h5>
+                <h1 class="mb-1">Calendario de Competiciones</h1>
+                <p class="mb-0">
+                    Calendario de competiciones en Galicia tanto de pista cubierta, cross, pista al
+                    aire libre, carreras en ruta y carreras populares.
+                </p>
                 <hr class="divider" />
                 <br>
             </div>
+            
+            <div id="calendario"></div>
 
-            <div class="row justify-content-center text-center d-flex " id="columnas-contacto">
-                <!-- Columna de Localización -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="fas fa-map-marker-alt"></i> <!-- Icono de ubicación -->
-                    <h5>Localización</h5>
-                    <p>Av. Romero Donallo 29 entreplanta Santiago</p>
-                </div>
-
-                <!-- Columna de Número de Teléfono -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="fas fa-phone-alt"></i> <!-- Icono de teléfono -->
-                    <h5>Número de Teléfono</h5>
-                    <p>+34 666666666</p>
-                </div>
-
-                <!-- Columna de Correo Electrónico -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="far fa-envelope"></i> <!-- Icono de sobre -->
-                    <h5>Correo Electrónico</h5>
-                    <p>atletismosantiago@gmail.com</p>
-                </div>
-            </div>
-
-            <div class="row justify-content-center text-center d-flex align-items-center mt-5   ">
-
-
-
-                <!-- Columna de Formulario de Contacto -->
-                <div class="col-lg-8 mb-3">
-                    <h3>Contacto</h5>
-                        <p style="font-weight: var(--bs-body-font-weight);">Si tienes alguna pregunta no dudes en
-                            ponerte en contacto con nosotros</p>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                            <label for="email" class="visually-hidden">Correo electrónico</label>
-                            <input id="email" type="text" class="form-control" placeholder="Correo electrónico"
-                                style="border:2px solid;border-color: var(--brand);">
-                            <label for="subject" class="visually-hidden">Asunto</label>
-                            <input id="subject" type="text" class="form-control" placeholder="Asunto"
-                                style="border:2px solid;border-color: var(--brand);">
-                        </div>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2 mt-2">
-                            <label for="message" class="visually-hidden">Mensaje</label>
-                            <textarea id="message" type="text" class="form-control" placeholder="Mensaje"
-                                style="border:2px solid;border-color: var(--brand);"></textarea>
-                        </div>
-                        <div
-                            class="d-flex flex-column flex-sm-row w-100 mt-4 text-center justify-content-center align-items-center">
-                            <button class="btn btn-primary" type="button" onclick="sendEmail()">Enviar</button>
-                        </div>
-                </div>
-
-            </div>
+            
         </div>
     </div>
-
-
-
-    <section class="map mt-2">
-        <div class="container-fluid p-0">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.0769986484106!2d-8.555213809876754!3d42.87121892827757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe158b981fc7%3A0x8d0501c2a3b47d0a!2sAv.%20de%20Romero%20Donallo%2C%2029%2C%2015706%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!5e0!3m2!1ses!2ses!4v1702333696937!5m2!1ses!2ses"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </section><!-- End Map Section -->
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var calendarEl = document.getElementById('calendario');
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                // Configuración y opciones del calendario
+                initialView: 'dayGridMonth',
+                events: [
+                    // Aquí puedes agregar eventos, por ejemplo:
+                    {
+                        title: 'Evento 1',
+                        start: '2023-12-15'
+                    },
+                    {
+                        title: 'Evento 2',
+                        start: '2023-12-18',
+                        end: '2023-12-20'
+                    }
+                ]
+            });
+            calendar.render();
+        });
+    </script>
 
 
 
@@ -238,6 +205,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-cbTbd1zNiqZ33c5g3iTAHU/x6YDFnJMI0fZc4//aHHaQ2tz+JJb7fbvYf9V86I5wB+M5M4ZLZvhY2+/sflMZUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js" integrity="sha512-UIqEBlFqVp7YQMEuoHYw7w8QVk0QzVpl5AhnGvYibopQiP/QZ/7vN6nMVWZizh40i1f+7bF2BQct3FZb56GvQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script> -->
