--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="">Historia</a></li>
-                            <li><a class="dropdown-item" href="">Inscripciones</a></li>
+                            <li><a class="dropdown-item" href="https://swimburger-cas-app-demo.web.app/forms/licencia">Licencias</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
