--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -90,80 +90,44 @@
     <div class="container mt-5 py-1">
         <div class="container">
             <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s">
-                <h5 class="text-primary-gradient fw-medium">CONTACTO</h5>
-                <h1 class="mb-1">Métodos de Contacto</h1>
-                <p class="mb-0">Si tienes alguna pregunta no dudes en ponerte en contacto con nosotros ya sea online o
-                    presencialmente</p>
+                <h5 class="text-primary-gradient fw-medium">PATROCINADORES</h5>
+                <h1 class="mb-1">Nuestros Patrocinadores</h1>
+                <p class="mb-0">Agradecemos a nuestros patrocinadores por su valioso apoyo a nuestro club de atletismo.
+                </p>
                 <hr class="divider" />
                 <br>
             </div>
 
-            <div class="row justify-content-center text-center d-flex " id="columnas-contacto">
-                <!-- Columna de Localización -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="fas fa-map-marker-alt"></i> <!-- Icono de ubicación -->
-                    <h5>Localización</h5>
-                    <p>Av. Romero Donallo 29 entreplanta Santiago</p>
-                </div>
-
-                <!-- Columna de Número de Teléfono -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="fas fa-phone-alt"></i> <!-- Icono de teléfono -->
-                    <h5>Número de Teléfono</h5>
-                    <p>+34 666666666</p>
-                </div>
-
-                <!-- Columna de Correo Electrónico -->
-                <div class="col-lg-3 col-md-4">
-                    <i class="far fa-envelope"></i> <!-- Icono de sobre -->
-                    <h5>Correo Electrónico</h5>
-                    <p>atletismosantiago@gmail.com</p>
+            <!-- Sección de Patrocinadores Actuales -->
+            <div class="row">
+                <div class="col-12 mb-4" style="margin-top: -3%;">
+                    <img src="./img/patrocinadores.png" alt="Patrocinadores" style="width: 100%;">
                 </div>
             </div>
 
-            <div class="row justify-content-center text-center d-flex align-items-center mt-5   ">
 
 
 
-                <!-- Columna de Formulario de Contacto -->
-                <div class="col-lg-8 mb-3">
-                    <h3>Contacto</h5>
-                        <p style="font-weight: var(--bs-body-font-weight);">Si tienes alguna pregunta no dudes en
-                            ponerte en contacto con nosotros</p>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                            <label for="email" class="visually-hidden">Correo electrónico</label>
-                            <input id="email" type="text" class="form-control" placeholder="Correo electrónico"
-                                style="border:2px solid;border-color: var(--brand);">
-                            <label for="subject" class="visually-hidden">Asunto</label>
-                            <input id="subject" type="text" class="form-control" placeholder="Asunto"
-                                style="border:2px solid;border-color: var(--brand);">
-                        </div>
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2 mt-2">
-                            <label for="message" class="visually-hidden">Mensaje</label>
-                            <textarea id="message" type="text" class="form-control" placeholder="Mensaje"
-                                style="border:2px solid;border-color: var(--brand);"></textarea>
-                        </div>
-                        <div
-                            class="d-flex flex-column flex-sm-row w-100 mt-4 text-center justify-content-center align-items-center">
-                            <button class="btn btn-primary" type="button" onclick="sendEmail()">Enviar</button>
-                        </div>
+            <!-- Sección para Potenciales Patrocinadores -->
+            <div class="row justify-content-center text-center d-flex mb-0" id="columnas-contacto">
+                <div class="col-lg-8 mb-0">
+                    <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5%;">
+                        <h1 class="mb-1">Únete como Patrocinador</h1>
+                        <p class="mb-0" style="font-weight: var(--bs-body-font-weight);">
+                            ¿Quieres ser parte de nuestro club y apoyar el atletismo local? Únete como patrocinador y
+                            disfruta de los beneficios de ser parte de nuestra comunidad deportiva.
+                        </p>
+                        <hr class="divider" />
+                        <br>
+                    </div>
+
+                    <div class="d-flex flex-column flex-sm-row w-100 mt-4 text-center justify-content-center align-items-center" style="margin-top: -3%;">
+                        <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='contacto.html'">¡Contáctanos!</button>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
-
-
-
-    <section class="map mt-2">
-        <div class="container-fluid p-0">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.0769986484106!2d-8.555213809876754!3d42.87121892827757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2efe158b981fc7%3A0x8d0501c2a3b47d0a!2sAv.%20de%20Romero%20Donallo%2C%2029%2C%2015706%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!5e0!3m2!1ses!2ses!4v1702333696937!5m2!1ses!2ses"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </section><!-- End Map Section -->
-
 
 
 
