--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#calendario" class="nav-link">Calendario</a>
+                        <a href="./calendario.html" class="nav-link">Calendario</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#estadisticas" class="nav-link ">Estadísticas</a>
+                        <a href="./estadisticas_club.html" class="nav-link ">Estadísticas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#patrocinadores" class="nav-link ">Patrocinadores</a>
+                        <a href="./patrocinadores.html" class="nav-link ">Patrocinadores</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacto" class="nav-link ">Contacto</a>
+                        <a href="./contacto.html" class="nav-link ">Contacto</a>
                     </li>
 
                 </ul>
