falta ya muy poco para acabar, lo unico estadisticas atletas

--- a/historia.html
+++ b/historia.html
@@ -89,30 +89,32 @@
     </nav>
     <div class="container mt-5 py-1">
         <div class="container">
-            <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s">
-                <h5 class="text-primary-gradient fw-medium">ESTADÍSTICAS</h5>
-                <h1 class="mb-1">RECORDS del Club</h1>
-                <p class="mb-0">A continuación, te mostramos los records del club en las diferentes pruebas atléticas</p>
+            <div class="text-center pb-0 wow fadeInUp" data-wow-delay="0.1s">
+                <h5 class="text-primary-gradient fw-medium">HISTORIA</h5>
+                <h1 class="mb-1">Historia del Club</h1>
                 <hr class="divider" />
                 <br>
-            </div>
-            <table id="tabla-marcas">
-                <thead>
-                    <tr>
-                        <th>Tipo de Prueba</th>
-                        <th>Nombre de Prueba</th>
-                        <th>Género</th>
-                        <th>Mejor Marca</th>
-                        <th>Atleta</th>
-                        <th>Lugar</th>
-                        <th>Fecha</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Aquí se cargarán los datos dinámicamente -->
-                </tbody>            
+            </div>            
         </div>
     </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-1 "></div>
+            <div class="col-lg-5  py-2">
+                <p>
+                    El proyecto del CAS (Club Atletismo Santiago) nace en 2013 con la intención de convertirse en el club de referencia de la comarca. Objetivo que se cumplió, convirtiéndose en un referente autonómico en categorías absoluta y sub20, en féminas y hombres, luchando en 6 ocasiones por el ascenso a 1ª Nacional y varios podios gallegos por equipos con el equipo masculino.
+                    <br><br>
+                    Para la temporada 2024 el CAS se propone, además de mantenerse en la lucha por el ascenso del equipo masculino a 1ª, luchar por los puestos de podium en las pruebas de clubes absolutas, sub 20 de chicos y chicas y buscar la asignatura pendiente: lograr clasificación para el C. España sub20 de clubes.                                    
+                    </p>
+                
+            </div>
+
+            <div class="col-lg-5 flex align-items-center justify-content-center text-center">
+                <img src="img/reloj-de-arena.png" style="width: 60%;" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+
 
 
 
